Closed Bug 1779410 Opened 3 years ago Closed 3 years ago

Typing in google doc is broken

Categories

(Core :: Graphics: Canvas2D, defect)

Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox102 --- unaffected
firefox103 --- unaffected
firefox104 + fixed

People

(Reporter: pascalc, Assigned: lsalzman)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Mozilla/5.0 (X11; Linux x86_64; rv:104.0) Gecko/20100101 Firefox/104.0 ID:20220712215641
Ubuntu 22.04, Wayland session & xwayland Firefox nightly

In a google doc document, what is displayed on screen is not synced with what I type on the keyboard.

STR:

  1. Create a google doc
  2. type something
  3. press Enter key

ER:
What I type is what I see

AR:
There is a one letter delay between what I type and what I see on screen, for example the last letter of a word is actually displayed with a blank space, the letter will be displayed only after I type another letter

This is a regression by bug 1777426
15:49.35 INFO: Last good revision: 0a598b1533e6794061a605e91655cad88c8ab4c9
15:49.35 INFO: First bad revision: 509b05b741a2c5b27f467f9bd8c45bb1f32902da
15:49.35 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=0a598b1533e6794061a605e91655cad88c8ab4c9&tochange=509b05b741a2c5b27f467f9bd8c45bb1f32902da

Flags: needinfo?(lsalzman)

Setting gfx.canvas.accelerated.async-present to false 'fixes' the bug.

Appears to be Wayland/XWayland specific. I could reproduce with Wayland, but not X11.

We aren't shipping accelerated canvas in 104, so I think should be marked as disabled (for beta/release)?

We are still in nightly, we will mark it as disabled when 104 is in beta.

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Flags: needinfo?(lsalzman)
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1d93ccc72ff3 Ensure SwapChainPresenter destructor is called before we access the front buffer. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
Flags: qe-verify+

Hello,
I couldn't reproduce this issue on neither wayland/xwayland sessions on Ubuntu 22.04 on Nightly 104.0a1(build ID: 20220712215641).
Would you be so kind as to verify if this bug still reproduces on Firefox RC 104.0?
Thank you.

Flags: needinfo?(aosmond)

This was fixed.

Flags: needinfo?(aosmond)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: