Bug 1779410 - Ensure SwapChainPresenter destructor is called before we access the front buffer. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D151732